fix(demo) make sidebar collapse

--- a/docgen/vcl.github.io/styles.scss
+++ b/docgen/vcl.github.io/styles.scss
@@ -50,7 +50,6 @@ header {
 
 .docMetadata {
   margin-bottom: 1em;
-  min-width: 20em;
 
   & .grid-span-gca,
   & .grid-span-gcb {
